datareporter logo shrinks on mobile view fix

--- a/client/app/assets/less/redash/report.less
+++ b/client/app/assets/less/redash/report.less
@@ -367,12 +367,6 @@
   border-bottom: 2px solid #ff3003 !important;
 }
 
-.mobile-navbar-logo img {
-  margin: -6px 18px 0 7px;
-  height: 26px !important;
-  width: 25px;
-}
-
 .mobile-navbar-menu .ant-dropdown-menu-item-divider {
   background: #dfdee8;
 }
